ui: Fix network ports toggling overflow issues

--- a/snf-cyclades-app/synnefo/ui/static/snf/css/main.css
+++ b/snf-cyclades-app/synnefo/ui/static/snf/css/main.css
@@ -6822,7 +6822,7 @@ input.has-errors {
 }
 
 .model-item .status-indicator {
-  width: 110px;
+  width: 65px;
   float: right;
 }
 
